icons, colors, links

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,18 +20,10 @@ title: Landing Page
                         Auto-funded public P2P infrastructure </br> 
                         Intended for Polkadot chains, specifically Kusama.
                     </h2>
-                    <!-- <div class="button-wrap">
-                        <a class="button cta is-rounded primary-btn raised">
-                            Get Started
-                        </a>
-                        <a class="button cta is-rounded">
-                            Discover
-                        </a>
-                    </div> -->
                 </div>
                 <div class="column is-5">
                     <figure class="image is-4by3">
-                        <img src="/img/illustrations/clouds.svg" alt="Description">
+                        <img src="/img/illustrations/sun.svg" alt="Description">
                     </figure>
                 </div>
 
