--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,11 +32,10 @@ title: Landing Page
     </div>
 </section>
 
-<section class="section section-feature-grey is-medium">
+<section id="features" class="section section-feature-grey is-medium">
     <div class="container">
         <div class="title-wrapper has-text-centered">
             <h2 class="title is-2">Features</h2>
-            <!-- <h3 class="subtitle is-5 is-muted">Subtitle</h3> -->
             <div class="divider is-centered"></div>
         </div>
 
@@ -86,7 +85,7 @@ title: Landing Page
     </div>
 </section>
 
-<section class="section section-light-grey is-medium">
+<section id="about" class="section section-light-grey is-medium">
     <div class="container">
 
         <div class="columns is-vcentered app-side">
