crete list element draft

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -85,7 +85,7 @@ title: Landing Page
     </div>
 </section>
 
-<section id="about" class="section section-light-grey is-medium">
+<section id="about" class="section section-feature-grey is-medium">
     <div class="container">
 
         <div class="columns is-vcentered app-side">
@@ -98,6 +98,21 @@ title: Landing Page
                     <img class="pushed-image" src="/img/illustrations/mockups/app-mockup.png">
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section id="about" class="section section-light-grey is-medium">
+    <div class="container">
+
+        <div class="columns is-vcentered app-side">
+            <h3 class="title is-3 is-spaced is-title-reveal">Table</h3>
+            <h4>Load balancer name</h4>
+            <a>url</a>
+            <a>public metrics</a>
+            <ul id="metricsData">
+
+            </ul>
         </div>
     </div>
 </section>
