--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -87,15 +87,14 @@ title: Landing Page
 
 <section id="about" class="section section-light-grey is-medium">
     <div class="container">
-
         <div class="columns is-vcentered app-side">
-            <div class="column is-5 is-offset-1">
+            <div class="column is-3 is-offset-1">
                 <h3 class="title is-3 is-spaced is-title-reveal">How it works</h3>
                 <p class="subtitle is-5 is-muted">Vedran creates a tunnel between load balancer and regular Polkadot nodes which allows nodes to serve requests from home networks while getting paid based on how useful they are.</p>
             </div>
-            <div class="column is-10">
+            <div class="column is-8">
                 <div class="has-text-centered">
-                    <img class="pushed-image" src="/img/illustrations/mockups/app-mockup.png">
+                    <img src="/img/illustrations/how_it_works_transparent.png">
                 </div>
             </div>
         </div>
