some content changes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@ title: Landing Page
                     </h1>
                     <h2 class="subtitle is-5 is-muted">
                         Auto-funded public P2P infrastructure </br> 
-                        Intended for Polkadot chains, specifically Kusama.
+                        intended for Substrate based chains.
                     </h2>
                 </div>
                 <div class="column is-5">
@@ -50,7 +50,7 @@ title: Landing Page
                             <img src="/img/icons/decentralized.svg">
                         </div>
                         <div class="card-text">
-                            <p>Stop relying on cloud servers</p>
+                            <p>Stop relying on cloud infrastructure</p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@ title: Landing Page
                             <img src="/img/icons/funds.svg">
                         </div>
                         <div class="card-text">
-                            <p>Run node and earn money</p>
+                            <p>Get paid for providing nodes</p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@ title: Landing Page
                             <img src="/img/icons/blockchain.svg">
                         </div>
                         <div class="card-text">
-                            <p>Currently supports all substrate based chains but it can be modified to support others</p>
+                            <p>Supports all substrate based chains but it can be modified to support other blockchains</p>
                         </div>
                     </div>
                 </div>
