--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,7 +32,7 @@ title: Landing Page
     </div>
 </section>
 
-<section id="features" class="section section-feature-grey is-medium">
+<section id="features" class="section section-feature-grey pt-100">
     <div class="container">
         <div class="title-wrapper has-text-centered">
             <h2 class="title is-2">Features</h2>
@@ -85,7 +85,7 @@ title: Landing Page
     </div>
 </section>
 
-<section id="about" class="section section-feature-grey is-medium">
+<section id="about" class="section section-feature-grey">
     <div class="container">
         <div class="columns is-vcentered app-side">
             <div class="column is-3 is-offset-1">
@@ -101,11 +101,16 @@ title: Landing Page
     </div>
 </section>
 
-<section id="table" class="section section-light-grey is-medium">
+<section id="load-balancers" class="section section-light-grey is-medium">
     <div class="container">
             <div class="title-wrapper has-text-centered">
                 <h2 class="title is-2">Load balancers</h2>
                 <div class="divider is-centered"></div>
+
+                <p class="pt-20">
+                   List of publicly available Vedran load balancers. If you are hosting Vedran load balancer,
+                   check out <a target="_blank" href="https://github.com/nodefactoryio/vedran-landing#listing-your-own-vedran-load-balancer">intructions for adding yours here</a> 
+                </p>
             </div>
             <div class="content-wrapper" id="loadBalancerWrapper">
                 <table class="table is-bordered is-fullwidth is-striped">
